[package]
name = "relaxation-analysis"
version = "0.1.0"
edition = "2021"
description = "A tool for simulating the relaxation behavior of a simplified FIFO MultiQueue (d-RA)."

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
